[package]
name = "game-off-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
bevy_pathmesh = { git = "https://github.com/vleue/bevy_pathmesh", version = "0.3.0" }
polyanya = "0.2.0"
